--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+    <main>
+
     <header>
         <h1>Nethmi Nanayakkara</h1>
     </header>
@@ -158,5 +160,6 @@
                             <h3>Garment Management System</h3>
                             <a href="#" class="learn-more">Learn More</a>
                         </div>
+                    </main>
 </body>
 </html>
