--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 </div>
             </div>
     <br/><br/>
+                <img src="/assets/images/prof img.jpg" alt="icon" style="float: left; margin-right: 10px; width: 400px; height: 500px; object-fit: cover;"/>
+
+                <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
                 <a href="  https://www.facebook.com/share/1DPN8Wzc1z/"target="blank"><img src="/assets/images/facebook.png" alt="facebook" style="width: 50px; height: 50px; object-fit: cover;"/></a>
 
@@ -208,6 +211,7 @@
     </main>
                     
             <footer>
+                
                 <a href="  https://www.facebook.com/share/1DPN8Wzc1z/"target="blank"><img src="/assets/images/facebook.png" alt="facebook" style="width: 50px; height: 50px; object-fit: cover;"/></a>
 
                 <a href="https://www.instagram.com/n_e_t_h_m_i_44?igsh=eGQzeDhibjRjajI0"target="blank"><img src="/assets/images/instagram.png" alt="instagram" style="width: 50px; height: 50px; object-fit: cover;"/></a>
